--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="7JyUriEjMyLLNq" async></script>
+        <script id="usercentrics-cmp" src="https://web.cmp.usercentrics-sandbox.eu/ui/pr/1115/loader.js" data-settings-id="7JyUriEjMyLLNq" async></script>
         <script
     id="usercentrics-ppg"
     privacy-policy-id="040bb175-d84f-4cc6-aea6-7f40d5ee2768"
