--- a/index.html
+++ b/index.html
@@ -9,14 +9,9 @@
     src="https://policygenerator-dev.usercentrics.eu/api/privacy-policy"
   >
   </script>
-        <!-- <script
-            id="usercentrics-ppg"
-            privacy-policy-id="e383aa4a-3447-4ea8-b760-0215b2ad722f"
-            src="https://policygenerator.usercentrics.eu/api/privacy-policy">
-        </script> -->
     </head>
     <body>
         <div>This is a Test</div>
-        <div class="uc-privacy-policy"></div>
+        <div class="uc-embed"></div>
     </body>
 </html>
