--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </head>
     <body>
         <div>This is a Test</div>
-        <div class="uc-embed"></div>
+        <div class="uc-privacy-policy"></div>
     </body>
 </html>
